Fix ios overflow in non-stacking contexts

--- a/src/user/interactive_prompt/components/ProfilePictures.module.css
+++ b/src/user/interactive_prompt/components/ProfilePictures.module.css
@@ -11,6 +11,9 @@
   border-radius: 50%;
   overflow: hidden;
   position: relative;
+
+  /* for ios; https://gist.github.com/domske/b66047671c780a238b51c51ffde8d3a0 */
+  transform: translateZ(0);
 }
 
 .itemContainer:not(:first-child) {
