--- a/src/user/interactive_prompt/components/VerticalPartlyFilledRoundedRect.module.css
+++ b/src/user/interactive_prompt/components/VerticalPartlyFilledRoundedRect.module.css
@@ -6,6 +6,9 @@
   align-items: center;
 
   transition: opacity 0.35s ease;
+
+  /* for ios; https://gist.github.com/domske/b66047671c780a238b51c51ffde8d3a0 */
+  transform: translateZ(0);
 }
 
 .inner {
